[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "openmuscle"
version = "0.1.0"
description = "OpenMuscle PC tools: receive, record, train, predict, simulate"
requires-python = ">=3.10"
license = {text = "MIT"}
dependencies = [
    "click>=8.0",
    "numpy>=1.24",
    "pandas>=2.0",
    "matplotlib>=3.7",
    "scikit-learn>=1.3",
]

[project.optional-dependencies]
viz3d = ["vispy>=0.14"]
dev = ["pytest>=7.0", "ruff>=0.1"]
all = ["openmuscle[viz3d,dev]"]

[project.scripts]
openmuscle = "openmuscle.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
