[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "openmuscle"
version = "0.2.0"
description = "OpenMuscle PC tools: receive, record, train, predict, simulate, web UI"
requires-python = ">=3.10"
license = {text = "MIT"}
dependencies = [
    "click>=8.0",
    "numpy>=1.24",
    "pandas>=2.0",
    "matplotlib>=3.7",
    "scikit-learn>=1.3",
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
    "pydantic>=2.0",
]

[project.optional-dependencies]
viz3d = ["vispy>=0.14"]
dev = ["pytest>=7.0", "ruff>=0.1"]
all = ["openmuscle[viz3d,dev]"]

[project.scripts]
openmuscle = "openmuscle.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"openmuscle.web" = ["static/*"]

[tool.ruff]
line-length = 100
